--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
     "framer-motion": "^12.9.4",
     "fuse.js": "^7.1.0",
     "prop-types": "^15.8.1",
