--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
+    "axios": "^1.9.0",
     "framer-motion": "^12.9.4",
     "fuse.js": "^7.1.0",
     "prop-types": "^15.8.1",
